# xde-menu

./: .gitignore  .indent.pro  AUTHORS  ChangeLog  MENUS.adoc  Makefile.am  NEWS  NEWS.in  README.in  README.md  README.md.in  RELEASE  RELEASE.md  THANKS  THANKS.in  TODO  TODO.in  _config.yml  autogen.sh  configure.ac  configure.sh  configure.template  gennews.sh  index.md  rebuild.sh  xde-menu-monitor  xde-menu-popmenu  xde-menu-quit  xde-menu-refresh  xde-menu-replace  xde-menu-restart  xde-menugen
data/: Makefile.am  XDE-Menu  xde-menu.desktop
man/: Makefile.am  dtwmrc.man  mwmrc.man  xde-menu.pod
src/: Makefile.am  xde-menu.c  xde-menu.h  xde_2bwm.c  xde_adwm.c  xde_aewm++.c  xde_aewm.c  xde_afterstep.c  xde_awesome.c  xde_blackbox.c  xde_bspwm.c  xde_ctwm.c  xde_cwm.c  xde_dtwm.c  xde_dwm.c  xde_echinus.c  xde_etwm.c  xde_ewmh.c  xde_fluxbox.c  xde_flwm.c  xde_fvwm.c  xde_glasswm.c  xde_goomwwm.c  xde_herbstluftwm.c  xde_i3.c  xde_icewm.c  xde_jwm.c  xde_larswm.c  xde_matwm2.c  xde_metacity.c  xde_mvwm.c  xde_mwm.c  xde_openbox.c  xde_openbox3.c  xde_openboxold.c  xde_pekwm.c  xde_perlpanel.c  xde_spectrwm.c  xde_twm.c  xde_uwm.c  (+10 more)
